fixtures/solidity/translated_semantic_tests/errors/named_error_args/named_error_args.sol
error E(uint a, uint b);
contract C {
    function f() public pure {
        revert E({b: 7, a: 2});
    }
}